==================================
Rilascio v2.0.4    del 15/03/2017
==================================

ryunbound: con autofit vengono preservate le colonne di larghezza zero.

==================================
Rilascio v2.0.3    del 18/10/2016
==================================

ContextMenu: corretto il riposizionamento in caso di sbordo.

==================================
Rilascio v2.0.2    del 04/10/2016
==================================

rytabs e ryque: ripensati i colori.

==================================
Rilascio v2.0.1    del 04/07/2016
==================================

rycode: coretto il posizionamento dell'icona "clear" alla move.

ryunbound: tolta la disabilitazione dell'helper in caso di editmode attivo.

==================================
Rilascio v2.0.0    del 15/06/2016
==================================

ryLabel: aggiunte le proprietà "align" e "color".

ryDraw: aggiunto border a ryPie e gestito background in ryGram.

ryScript: aggiunto il metodo "refresh"; corretto il funzionamento dell'intellisense.

ryUnbound: migliorato il comportamento dell'editmode.

QVUSERS, QVROLES: aggiunto il campo REGISTRY.

ryFamily: corretto il comportamento alla focus.

==================================
Rilascio 1.70.28    del 06/04/2016
==================================

ryDraw: generazione dei colori per tonalità nei grafici a torta.

==================================
Rilascio 1.70.27    del 04/04/2016
==================================

ryUnbound: corretto lo scroll orizzontale con editmode abilitato.

ryWinz: riportato il titolo sull'MDI per i form senza barra (top) dei controlli.

ryDraw: implementato il grafico a torta.

==================================
Rilascio 1.70.26    del 28/03/2016
==================================

Perfezionato il comportamnto di RYWINZ.Abort().

Utilizzato RYWINZ.Post() in tutto Cambusa / Corsaro.

Nuova gestione dei messaggi d'avanzamento.

==================================
Rilascio 1.70.25    del 20/03/2016