@@ -289,9 +289,9 @@ function class_qvbanche(settings,missing){
     var objtabs=$( prefix+"tabs" ).rytabs({
         top:0,
         tabs:[
-            {title:"Selezione"},
-            {title:"Contesto"},
-            {title:"Documenti"}
+            {title:"Selezione", csize:800, msize:300},
+            {title:"Contesto", csize:800},
+            {title:"Documenti", csize:800}
         ],
         select:function(i,p){
             if(p==2){
