@@ -5,12 +5,15 @@
 *                                                                           *
 * Modified by Rodolfo Calzetti and renamed to prevent overwriting           *
 ****************************************************************************/
-/* `Basic HTML
+/* `Basic HTML,
 ----------------------------------------------------------------------------------------------------*/
 
+/*
 * {
   cursor: default;
 }
+*/
+:not(.ryselectable) > table{cursor: default;}
 
 html,
 body {
@@ -299,7 +302,7 @@ div.ui-resizable-handle {
 }
 
 .window_main {
-  background: #F0F5F5;
+  background: transparent;
   rudyz-margin: 0px 0px 0px 173px;
   rudyz-min-height: 100%;
   height: 100%;
@@ -319,11 +322,17 @@ div.ui-resizable-handle {
 
 /* rudyz */
 .window_hanger{
-  background: #F0F5F5;
+  background: transparent;
   height: 100%;
 }
 .window_content{
-  background: #F0F5F5;
+  /* background: #F0F5F5; */
+  background-color:transparent;
+  background: -webkit-linear-gradient(#FFFFFF, #E6F2FF); /* For Safari */
+  background: -o-linear-gradient(#FFFFFF, #E6F2FF); /* For Opera */
+  background: -moz-linear-gradient(#FFFFFF, #E6F2FF); /* For Firefox */
+  background: -ms-linear-gradient(#FFFFFF, #E6F2FF); /* For IE */
+  background: linear-gradient(#FFFFFF, #E6F2FF); /* Standard syntax */
 }
 
 
