@@ -176,7 +176,7 @@ top:6px;
 width:1px;
 height:1px;
 border:none;
-text-indent:-10px;
+text-indent:0px;
 overflow:hidden;
 }
 
@@ -188,7 +188,7 @@ top:6px;
 width:1px;
 height:1px;
 border:none;
-text-indent:-10px;
+text-indent:0px;
 overflow:hidden;
 }
 
@@ -200,7 +200,7 @@ top:6px;
 width:1px;
 height:1px;
 border:none;
-text-indent:-10px;
+text-indent:0px;
 overflow:hidden;
 }
 
@@ -212,7 +212,7 @@ top:6px;
 width:1px;
 height:1px;
 border:none;
-text-indent:-10px;
+text-indent:0px;
 color:white;
 overflow:hidden;
 }
