@@ -16,5 +16,5 @@ top:6px;
 width:1px;
 height:1px;
 border:none;
-text-indent:-10px;
+text-indent:0px;
 }
